@@ -1,3 +1,6 @@
+
+        - Provide optimize_as for pre-2.0100 Moose versions
+
 0.06
         - Use inline_as instead of the deprecated optimize_as
 
